--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "web": "expo start --web",
     "lint": "expo lint"
   },
-"dependencies": {
-  "@expo/vector-icons": "^15.0.3",
-  "@react-native-async-storage/async-storage": "1.23.1",
-  "expo-image-picker": "~16.0.3",
+  "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.8.4",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.19",
@@ -23,6 +23,7 @@
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
+    "expo-image-picker": "~16.0.3",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.14",
@@ -43,7 +44,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "~0.21.0",
+    "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
