--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "math-bridge-handbook",
     "slug": "math-bridge-handbook",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/images/icon.png",
     "scheme": "mathbridgehandbook",
     "userInterfaceStyle": "automatic",
@@ -34,7 +34,8 @@
           "backgroundColor": "#FF6600"
         }
       ],
-      "expo-sqlite"
+      "expo-sqlite",
+      "expo-video"
     ],
     "experiments": {
       "typedRoutes": true
