--- a/package.json
+++ b/package.json
@@ -12,18 +12,17 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.8.4",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.3",
     "expo": "~54.0.23",
-    "expo-av": "^16.0.7",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
-    "expo-image-picker": "~16.0.3",
+    "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.14",
@@ -33,6 +32,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
+    "expo-video": "~3.0.15",
     "expo-web-browser": "~15.0.9",
     "firebase": "^11.10.0",
     "react": "19.1.0",
