--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-video": "~3.0.15",
     "expo-web-browser": "~15.0.9",
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.6.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
